fix(FE-19): changes made to terms_of_use alignment

--- a/src/pages/settingsPage/profilePage.css
+++ b/src/pages/settingsPage/profilePage.css
@@ -86,12 +86,12 @@ label {
 .field {
   width: 40%;
 }
-/* Nav {
+Nav {
   display: none;
-} */
-/* footer {
+}
+footer {
   display: none;
-} */
+}
 
 /* media queries starts here */
 @media screen and (max-width: 376px){
